--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -9,10 +9,10 @@ on:
   push:
     tags:
     - 'v*'
-  branches: 
-   - master
-  schedule:
-    - cron: 0 8 * * 5
+#  branches: 
+#   - master
+#  schedule:
+#    - cron: 0 8 * * 5
 watch:
     types: [started]
 
