--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -1,7 +1,5 @@
-################################################################################################
-# 修改 TNAME: R2100 中的R2100为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-################################################################################################
-name: Build Padavan(创建Padavan固件)
+修改TNAME: K2P-5.0 中的K2P-5.0为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
+name: Build Padavan
 
 on: 
   release:
@@ -9,11 +7,11 @@ on:
   push:
     tags:
     - 'v*'
-#  branches: 
-#   - master
+  #  branches: 
+  #    - master
 #  schedule:
 #    - cron: 0 8 * * 5
-watch:
+  watch:
     types: [started]
 
 jobs:
